<resources>
    <string name="app_name" translatable="false">Fontigo</string>
    <string name="network_error">Internet connection is required, please check your internet connection</string>
    <string name="network_retry">Retry</string>
    <string name="login_username">User</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>
    <string name="login_forgotPassword">Forgot password?</string>
    <string name="login_volver">Back</string>
    <string name="login_restoreMessage">Enter your user below, We\'ll send you a link to restore your password.</string>
    <string name="login_restore">Submit</string>
    <string name="descripcion_imagen" translatable="false">Avatar</string>
    <string name="ahorros">Savings</string>
    <string name="incremento_en">Increased by</string>
    <string name="ultimo_mes">in last month</string>
    <string name="creditos">Credits</string>
    <string name="abonado">Paid</string>
    <string name="del_total">of the total</string>
    <string name="recaudos_nomina">Payroll</string>
    <string name="aplicado">Apply on</string>
    <string name="accion_documentacion">Documents</string>
    <string name="accion_simulador">Simulator</string>
    <string name="accion_solicitar_credito">Request credit</string>
    <string name="no_existen_registros_para_mostrar">There are no records to display</string>
    <string name="ahorros_generales">General</string>
    <string name="ahorros_programados">Programed</string>
    <string name="sdats">SDATs</string>
    <string name="tasa_ea">Rate A.E.</string>
    <string name="deposito">Deposit</string>
    <string name="tipo">Type</string>
    <string name="valor">Amount</string>
    <string name="fecha_constitucion">Constitution date</string>
    <string name="plazo_dias">Term (days)</string>
    <string name="fecha_vencimiento">Expiration date</string>
    <string name="saldo">Balance</string>
    <string name="intereses_reconocidos">Recognized interests</string>
    <string name="estado">Status</string>
    <string name="perfil">Profile</string>
    <string name="beneficiarios">Beneficiaries</string>
    <string name="actualizar_clave">Change password</string>
    <string name="logout">Logout</string>
    <string name="acerca_de">About</string>
    <string name="codeudas">Codeudas</string>
    <string name="configuracion">Settings</string>
    <string name="configuracion_seguridad">Security</string>
    <string name="configuracion_vibrador">Vibrator</string>
    <string name="configuracion_touchid_titulo">Use Touch ID</string>
    <string name="configuracion_touchid_resumen">Use Touch ID to sign in</string>
    <string name="configuracion_vibrador_titulo">Activate vibrator</string>
    <string name="configuracion_vibrador_resumen">Use vibration effects</string>
    <string name="login_hola">Hello</string>
    <string name="login_nousuario">Not</string>
    <string name="configuracion_alert_touchid_title">There is no biometric data on the device, Do you want to enroll biometric?</string>
    <string name="configuracion_alert_touchid_yes">Go to settings</string>
    <string name="configuracion_alert_touchid_no">No</string>
    <string name="activartouch_cancelar">Cancel</string>
    <string name="activartouch_activar">Enable Touch ID</string>
    <string name="activartouch_mensaje">%s, enter your password to activate Touch ID</string>
    <string name="touchid_titulo">Biometric login</string>
    <string name="perfil_empresa">Company</string>
    <string name="perfil_nacimiento">Birth date</string>
    <string name="prefil_ingreso_empresa">Joined company</string>
    <string name="perfil_afiliacion">Membership</string>
    <string name="perfil_mail">Mail</string>
    <string name="perfil_telefono">Phone</string>
    <string name="perfil_cupo">Amount available</string>
    <string name="cupo_endeudamiento">Indebtedness</string>
    <string name="ok">Ok</string>
    <string name="configuracion_alert_touchid_title_d">There is no biometric data on the device, Please go and enroll biometric data</string>
    <string name="beneficiarios_singular">Beneficiarie</string>
    <string name="cambiarpassword_nuevoPassword">New password</string>
    <string name="cambiarpassword_confirmPassword">Confirm password</string>
    <string name="cambiarpassword_cambiarPassword">Change password</string>
    <string name="cambiarpassword_mensaje">%s, enter your current and new password</string>
    <string name="powered_by">Powered by StartLineSoft.com</string>
    <string name="documentacion_certificado_tributario">"Tax Certificate "</string>
    <string name="documentacion_solicitar_certificado_tributario">Request tax certificate</string>
    <string name="documentacion_certificado_tributario_anio">Year</string>
    <string name="solicitar">Request</string>
    <string name="tomar_foto_de_camara">Take a photo</string>
    <string name="seleccionar_foto_de_galeria">Select photo from gallery</string>
    <string name="simulador_descripcion">Fill the form to simulate your credit</string>
    <string name="modalidad_credito">Credit modality</string>
    <string name="periodicidad_pago">Payment periodicity</string>
    <string name="valor_credito">Credit amount</string>
    <string name="plazo_credito">Term</string>
    <string name="simular_credito">Simulate credit</string>
    <string name="simulacion_de_crédito">Credit simulation</string>
    <string name="fecha_simulacion">Simulation date</string>
    <string name="tasa">Rate</string>
    <string name="fecha_primer_pago">First payment date</string>
    <string name="fecha_ultimo_pago">Last payment date</string>
    <string name="valor_cuota">Quota value</string>
    <string name="solicitar_credito_descripcion">Fill the form to request a credit</string>
    <string name="observaciones">Observations</string>
</resources>