<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glIzq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glDer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glDer"
        app:layout_constraintStart_toStartOf="@id/glIzq"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="0.4">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_launcher"/>

                <!-- Imagen del socio -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ivAvatarContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:visibility="gone">
                    <androidx.cardview.widget.CardView
                        android:layout_width="160dp"
                        android:layout_height="160dp"
                        app:cardCornerRadius="80dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">
                        <ImageView
                            android:id="@+id/ivImagen"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/descripcion_imagen" />
                    </androidx.cardview.widget.CardView>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <!-- Fin de la imagen del socio -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_horizontal"
                android:layout_weight="0.6"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:padding="1dp"
                    android:text=""
                    android:textColor="@color/blanco"
                    android:textSize="30sp"
                    android:fontFamily="@font/calibri"
                    android:textAlignment="center"
                    android:visibility="gone"/>

                <EditText
                    android:id="@+id/etUser"
                    style="@style/Login_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:autofillHints="@string/login_username"
                    android:drawableEnd="@drawable/ic_login_et_user"
                    android:hint="@string/login_username"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/etPassword"
                    style="@style/Login_EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:autofillHints="@string/login_password"
                    android:drawableEnd="@drawable/ic_login_et_password"
                    android:hint="@string/login_password"
                    android:inputType="textPassword"/>

                <TextView
                    android:id="@+id/tvError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:padding="1dp"
                    android:text=""
                    android:textColor="@color/error"
                    android:textSize="18sp"
                    android:visibility="gone"/>

                <android.widget.Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/login_btn_bg"
                    android:enabled="false"
                    android:stateListAnimator="@null"
                    android:text="@string/login_login"
                    android:textAllCaps="false"
                    android:textColor="@color/blanco"/>

                <TextView
                    android:id="@+id/tvNoUsuario"
                    style="@style/Login_Link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:clickable="true"
                    android:focusable="true"
                    android:text=""
                    android:textAlignment="center"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/tvForgotPassword"
                    style="@style/Login_Link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/login_forgotPassword"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/progressBar"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            style="?android:progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/blanco"
            android:indeterminateTintMode="multiply" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>