<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".OlvideClaveActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glIzq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glDer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glDer"
        app:layout_constraintStart_toStartOf="@id/glIzq"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_horizontal|center_vertical"
                android:layout_weight="0.5">

                <ImageView
                    android:id="@+id/ivLogo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_launcher"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_horizontal"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/login_restore_message"
                    android:textStyle="normal"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:textColor="@color/blanco" />

                <EditText
                    android:id="@+id/etUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:drawableEnd="@drawable/ic_login_et_user"
                    android:inputType="text"
                    android:hint="@string/login_username"
                    android:autofillHints="@string/login_username"
                    style="@style/Login_EditText"/>

                <Button
                    android:id="@+id/btnSubmit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/login_btn_bg"
                    android:stateListAnimator="@null"
                    android:enabled="false"
                    android:text="@string/login_restore"
                    android:textAllCaps="false"
                    android:textColor="@color/blanco" />

                <TextView
                    android:id="@+id/tvVolver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/login_volver"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/glDer"
                    app:layout_constraintStart_toStartOf="@+id/glIzq"
                    style="@style/Login_Link"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:background="@color/progressBar"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTintMode="multiply"
            android:indeterminateTint="@color/blanco"
            style="?android:progressBarStyleLarge"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>